--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+body {
+	height: 400vh;
+	margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+section {
+	height: 100vh;
+	width: 100%;
+	display: grid;
+	place-content: center;
+	z-index: 2;
+	position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+svg {
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	z-index: -1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+	font-family: sans-serif;
+	font-size: 4em;
+}
+.text {
+	text-transform: uppercase;
+	font-weight: bold;
+	fill: #e6e6e6;
+}
+.animate {
+	animation: reveal 1s forwards;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes reveal {
+	from {
+		opacity: 0;
+		transform: translateX(-180px);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0);
+	}
 }
