--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ svg {
 h1 {
 	font-family: sans-serif;
 	font-size: 4em;
+	color: #222222;
 }
 .text {
 	text-transform: uppercase;
@@ -36,10 +37,10 @@ h1 {
 @keyframes reveal {
 	from {
 		opacity: 0;
-		transform: translateX(-180px);
+		transform: translateX(-300px) rotateZ(180deg);
 	}
 	to {
 		opacity: 1;
-		transform: translateX(0);
+		transform: translateX(0) rotateZ(0);
 	}
 }
